Reapired overflow issue

--- a/style.css
+++ b/style.css
@@ -73,6 +73,8 @@ span.result-info-span {
     border-radius: 0.2rem;
     padding: 1rem;
     overflow-y: auto;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
 }
 
 #quiz-box h1 {
@@ -179,45 +181,8 @@ span.answer-letter {
 
 /* SCROLLBAR STYLING */
 ::-webkit-scrollbar {
-    width: 5px;
-    height: 1px;
-}
-
-::-webkit-scrollbar-button {
     width: 0px;
     height: 0px;
-}
-
-::-webkit-scrollbar-thumb {
-    background: #0076aa;
-    border: 0px none #ffffff;
-    border-radius: 50px;
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background: #279dd4;
-}
-
-::-webkit-scrollbar-thumb:active {
-    background: #279dd4;
-}
-
-::-webkit-scrollbar-track {
-    background: #aaa;
-    border: 0px none #ffffff;
-    border-radius: 50px;
-}
-
-::-webkit-scrollbar-track:hover {
-    background: #aaa;
-}
-
-::-webkit-scrollbar-track:active {
-    background: #aaa;
-}
-
-::-webkit-scrollbar-corner {
-    background: transparent;
 }
 
 /* MEDIA QUERIES */
